--- a/index.html
+++ b/index.html
@@ -12,61 +12,55 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
-
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin=""/>
-
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
-
     <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
     <link rel="shortcut icon" href="assets/images/logo-covid-project-1.ico" />
     <title>Covid-19</title>
 </head>
 
 <body>
-    
     <header class="hero is-12 has-background-dark">
         <div class="hero-body">
             <div class="columns is-mobile is-centered is-vcentered">
                 <img class="image is-64x64" src="./assets/images/logo-covid-project-1.png"><span
-                    class="title is-1 has-text-light is-marginless has-text-centered">Covid-19 Tracker</span><img class="image is-64x64"
-                    src="./assets/images/logo-covid-project-1.png">
+                    class="title is-1 has-text-light is-marginless has-text-centered">Covid-19 Tracker</span><img
+                    class="image is-64x64" src="./assets/images/logo-covid-project-1.png">
             </div>
         </div>
     </header>
 
-    <main class="tile is-12 is-mobile is-ancestor is-marginless has has-background-white-ter">
-        <div class="tile is-8 has-text-centered has-background-white-ter is-parent" id="map-Id">
+    <main class="tile is-12 is-mobile is-ancestor is-marginless has-background-white-ter">
+        <section class="tile is-8 has-text-centered has-background-white-ter is-parent" id="map-Id">
             <div class="tile is-child">
                 <div class="columns is-mobile is-centered is-vcentered">
-                    <img class="image is-32x32" src="./assets/images/logo-covid-project-1.png"><span
-                        class="title is-3 has-text-dark is-marginless">Impact</span><img class="image is-32x32"
-                        src="./assets/images/logo-covid-project-1.png">
+                    <h3 class="title is-3 has-text-dark is-marginless">Global Impact</h3>
                 </div>
-                <div class="tile" id="map">
-                </div>
+                <div class="tile" id="map"></div>
                 <canvas id="myChart"></canvas>
             </div>
-        </div>
-        <div class="tile is-4 has-text-centered has-background-white-ter is-parent is-vertical" id="news-Id">
+        </section>
+        <section class="tile is-4 has-text-centered has-background-white-ter is-parent is-vertical" id="news-Id">
             <div class="tile is-child" id="center-head">
                 <div class="columns is-mobile is-centered is-vcentered">
-                    <img class="image is-32x32" src="./assets/images/logo-covid-project-1.png"><span
-                        class="title is-3 has-text-dark is-marginless">News</span><img class="image is-32x32"
-                        src="./assets/images/logo-covid-project-1.png">
+                    <h3 class="title is-3 has-text-dark is-marginless">News Feed</h3>
                 </div>
                 <div class="column is-vertical has-background-white-ter" id="news-box">
                 </div>
             </div>
-
-
-        </div>
+        </section>
     </main>
+    <footer class="footer is-paddingless">
+        <div class="content has-text-centered">
+            <p>
+                <strong>Covid-19 Tracker</strong> &copy; 2020 - <a href="./about.html">About</a>
+            </p>
+        </div>
+    </footer>
 
     <script src="assets/js/script.js"></script>
 
